--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@prisma/client": "^7.2.0",
     "next": "16.1.0",
     "pg": "^8.16.3",
-    "prisma": "^7.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
@@ -27,8 +26,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.0",
+    "prisma": "^7.2.0",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "prisma": "^5.0.0"
+    "typescript": "^5"
   }
 }
